<resources>
    <string name="app_name">사이다</string>

    <string name="toolbar_title_register">회원가입</string>
    <string name="toolbar_title_register_complete">완료</string>

    <string name="on_boarding_title">금융과 소비를\n시원하게 연결하다\n사이다</string>
    <string name="kakao_register">카카오톡으로 시작</string>
    <!-- 서비스 이용 동의 -->
    <string name="consent_title">서비스 이용에\n동의해주세요</string>
    <string name="consent_body1">만 14세 이상입니다(필수)</string>
    <string name="consent_body2">서비스 이용 약관(필수)</string>
    <string name="consent_body3">개인정보 처리 방침(필수)</string>
    <string name="consent_body4">약관 전체 동의</string>
    <string name="consent_sub1">자세히 보기</string>
    <string name="consent_sub2">접기</string>
    <string name="consent_sub3">전체 약관에 동의합니다</string>

    <string name="register_tap1">서비스 동의</string>
    <string name="register_tap2">정보 입력</string>
    <string name="register_tap3">키워드 추천</string>

    <string name="register_btn_text">확인했어요</string>

    <string name="register_nickname_title">닉네임을\n입력해주세요</string>
    <string name="register_nickname_sub">닉네임은 10자 이하로 입력해주세요</string>
    <string name="register_nickname_hint">2~10자로 입력해주세요</string>
    <string name="register_nickname_random">랜덤 닉네임 만들기</string>
    <string name="register_nickname_able">사용 가능한 닉네임입니다</string>
    <string name="register_nickname_disable">중복된 닉네임입니다</string>

    <string name="register_profile_title">성별과 생년월일을\n입력해주세요</string>
    <string name="register_profile_gender">성별</string>
    <string name="register_profile_birth">생년월일</string>
    <string name="register_profile_male">남성</string>
    <string name="register_profile_female">여성</string>
    <string name="register_profile_birth_check">14세 이상으로 선택해주세요</string>
    <string name="register_profile_gender_check">본인의 성별을 선택해주세요</string>

    <string name="register_keyword_title">원하는 챌린지 분야를\n모두 선택해주세요</string>
    <string name="register_keyword_challenge">관심있는 챌린지</string>
    <string name="register_keyword_keyword">관심 키워드</string>
    <string name="register_keyword_min">최소 2개 선택</string>

    <string name="register_completion_title">회원가입이\n완료되었어요</string>

    <string name="challenge_investing">재테크</string>
    <string name="challenge_saving">소비절약</string>
    <string name="challenge_money_management">돈 관리</string>
    <string name="challenge_financial_learning">금융학습</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <!-- Challenge Card -->
    <string name="challenge_recruiting">모집중</string>
    <string name="challenge_recruit_complete">모집완료</string>
    
    <string name="challenge_reward">리워드</string>
    <string name="challenge_1week">1주</string>
    <string name="challenge_official">공식 챌린지</string>
    <string name="date_hint">0000년 00월 00일</string>
    
    <!-- Challenge Create -->
    <string name="challenge_create_toolbar_title">챌린지 개설</string>
    <string name="challenge_create_toolbar_check_title">챌린지 검토</string>
    <string name="challenge_create_toolbar_complete_title">챌린지 신청 완료</string>
    <string name="challenge_create_toolbar_complete">완료</string>

    <string name="challenge_create_select_title">개설을 원하는\n챌린지 분야를\n선택해보세요</string>

    <string name="challenge_create_check_title">챌린지 신청하기 전\n유의해주세요</string>
    <string name="challenge_create_check_text1">인증샷 검토는 호스트가 직접 관리해요</string>
    <string name="challenge_create_check_text2">챌린지 승인 후 챌린지 삭제는 불가능해요</string>
    <string name="challenge_create_check_text3">최소 참여 인원 3명 미충족시 진행이 불가능해요</string>
    <string name="challenge_create_check_text4">모집과 시작은 승인일 기준 다음날 자정에 시작해요</string>

    <string name="challenge_create_complete_title">챌린지 신청이\n완료되었습니다</string>
    <string name="challenge_create_complete_text1">심사는 최소 1일에서 최대 7일까지 소요되어요</string>
    <string name="challenge_create_complete_text2">규칙에 어긋나는 내용이 있을시 반려될 수 있어요</string>
    <string name="challenge_create_complete_button">확인했어요</string>

    <string name="challenge_title_title">챌린지 제목</string>
    <string name="challenge_introduction_title">챌린지 소개</string>
    <string name="challenge_capacity_title">참여 정원</string>
    <string name="challenge_recruitment_period_title">모집 기간</string>
    <string name="challenge_challenge_period_title">챌린지 기간</string>
    <string name="challenge_authentication_mission">인증 미션</string>

    <string name="challenge_title_hint">하루 만보 걷기 인증하기</string>
    <string name="challenge_introduction_hint">챌린지 목적, 참여시 좋은 점, 참여 권유 대상 등 챌린저들의 이해를 돕기 위한 설명을 적어주세요.</string>
    <string name="challenge_capacity_sub">3명 이상 30명까지 가능합니다</string>
    <string name="challenge_recruitment_period_sub">최소 1일부터 7일까지 가능합니다</string>
    <string name="challenge_challenge_period_sub">최소 1주부터 8주까지 가능합니다</string>
    <string name="challenge_authentication_hint">인증샷 모드에서 10,000원이 적힌 화면 인증</string>

    <string name="challenge_title_alert_min">최소 5자부터 입력할 수 있습니다</string>
    <string name="challenge_introduction_alert_min">최소 30자부터 입력할 수 있습니다</string>
    <string name="challenge_authentication_alert_min">최소 5자부터 입력할 수 있습니다</string>

    <string name="challenge_title_alert_max">최대 30자까지 입력할 수 있습니다</string>
    <string name="challenge_introduction_alert_max">최대 1,000자까지 입력할 수 있습니다</string>
    <string name="challenge_authentication_alert_max">최대 30자까지 입력할 수 있습니다</string>

    <string name="challenge_example_success">인증 성공 사진 예시를 올려주세요</string>
    <string name="challenge_example_fail">인증 실패 사진 예시를 올려주세요</string>
    
    <string name="challenge_create_btn">챌린지 개설 신청하기</string>

    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_select">선택</string>

    <string name="challenge_home_title">챌린지</string>
    <string name="challenge_popular">인기 챌린지</string>
    <string name="challenge_more">더보기</string>

    <string name="challenge_add">챌린지 직접 만들기</string>
    <string name="detail_view">자세히 보기</string>
    <string name="simply_view">자세히 보기</string>

    <string name="challenge_review_tap1">심사중</string>
    <string name="challenge_review_tap2">반려/실패</string>
    <string name="challenge_review_tap3">심사완료</string>

    <string name="challenge_delete">챌린지 삭제</string>
    <string name="challenge_review_success">심사 완료</string>
    <string name="challenge_review_return">반려 사유</string>
    <string name="challenge_review_fail">실패 사유</string>
    
    <string name="challenge_ongoing_title">진행중인 챌린지</string>
    <string name="challenge_finish_title">최근 종료된 챌린지</string>
    <string name="challenge_review_title">심사중인 챌린지</string>
    <string name="challenge_review_complete">심사완료</string>
    
    <string name="challenge_detail_current">챌린지 현황</string>
    <string name="challenge_detail_intro">챌린지 소개</string>
    <string name="challenge_detail_info">챌린지 정보</string>
    <string name="challenge_detail_recruit_period">모집 기간</string>
    <string name="challenge_detail_challenge_period">챌린지 기간</string>
    <string name="challenge_detail_recruit_count">모집 인원</string>
    <string name="challenge_detail_mission_count">인증 횟수</string>
    <string name="challenge_detail_mission_time">인증 시간</string>
    <string name="challenge_detail_reward">리워드</string>
    <string name="challenge_detail_rule">챌린지 규칙</string>
    <string name="challenge_detail_mission">인증 미션</string>
    <string name="challenge_detail_success">인증 기준</string>
    <string name="challenge_detail_fail">실패 기준</string>
    <string name="challenge_detail_mission_success">이렇게 인증하면 성공</string>
    <string name="challenge_detail_mission_fail">이렇게 인증하면 실패</string>
    <string name="challenge_detail_host">챌린지 호스트</string>
    <string name="challenge_detail_caution">유의사항</string>

    <string name="challenge_detail_average_current">평균 현황</string>
    <string name="challenge_detail_my_current">나의 현황</string>

    <string name="my_authentication">나의 인증글</string>

    <string name="challenge_authentication_title_title">인증하기</string>
    <string name="challenge_authentication_photo">인증 사진</string>
    <string name="challenge_authentication_photo_sub">최소 1개 이상의 사진을 첨부해주세요</string>
    <string name="challenge_authentication_title">제목</string>
    <string name="challenge_authentication_title_hint">오늘 인증 완료!</string>
    <string name="challenge_authentication_content">내용</string>
    <string name="challenge_authentication_content_hint">인증에 대한 이야기와 다양한 생각들, 사진에 대한 설명을 작성해보세요! </string>
    <string name="challenge_authentication_btn">인증 완료하기</string>

    <string name="my_page">마이페이지</string>

    <string name="challenge_look">챌린지 둘러보기</string>
    <string name="challenge_none_certify">인증한 챌린지가 없습니다</string>
    <string name="challenge_none_certify_sub">함께 인증하는 금융 챌린지를\n진행해보세요</string>

    <string name="challenge_make">챌린지 만들러 가기</string>
    <string name="challenge_none_interest">관심을 누른 챌린지가 없습니다</string>
    <string name="challenge_none_interest_sub">마음에 드는 챌린지가 없나요?\n직접 챌린지를 만들어보세요</string>
</resources>