<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_keyword_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_keyword_title"
            android:textSize="@dimen/text_5xl"
            android:fontFamily="@font/pretendard_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_challenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/tv_keyword_title">

            <TextView
                android:id="@+id/tv_keyword_challenge"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/register_keyword_challenge"
                android:textSize="@dimen/text_xl"
                android:gravity="center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_keyword_challenge_min"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/register_keyword_min"
                android:textSize="@dimen/text_base"
                android:textColor="@color/icon"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_profile_male"
                style="@style/LineButtonStyle"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/register_profile_male"
                android:textSize="@dimen/text_xl"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/btn_profile_female"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_keyword_challenge" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_profile_female"
                style="@style/LineButtonStyle"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/register_profile_female"
                android:textSize="@dimen/text_xl"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_profile_male"
                app:layout_constraintTop_toBottomOf="@id/tv_keyword_challenge" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/view_challenge">

            <TextView
                android:id="@+id/tv_keyword_keyword"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/register_keyword_keyword"
                android:textSize="@dimen/text_xl"
                android:gravity="center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_keyword_keyword_min"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/register_keyword_min"
                android:textSize="@dimen/text_base"
                android:textColor="@color/icon"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>