<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="register"
            type="com.cider.cider.presentation.viewmodel.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.register.RegisterNicknameFragment">

        <TextView
            android:id="@+id/tv_nickname_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_nickname_title"
            android:textSize="@dimen/text_5xl"
            android:fontFamily="@font/pretendard_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_nickname_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_nickname_sub"
            android:textSize="@dimen/text_lg"
            android:fontFamily="@font/pretendard_bold"
            android:textColor="@color/main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nickname_title"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_nickname_sub">

            <EditText
                android:id="@+id/et_nickname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height_44"
                android:background="@drawable/shape_edittext_none"
                android:paddingHorizontal="12dp"
                android:maxLength="10"
                android:hint="@string/register_nickname_hint"
                android:text="@={register.nickname}"
                android:textSize="@dimen/text_base"
                android:fontFamily="@font/pretendard_bold"
                android:textColorHint="@color/gray_5"
                android:textColor="@color/text"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints=""/>

            <TextView
                android:id="@+id/tv_check_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main"
                android:textSize="@dimen/text_lg"
                android:fontFamily="@font/pretendard_regular"
                android:visibility="gone"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/et_nickname"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/register_nickname_able"/>

            <androidx.constraintlayout.utils.widget.ImageFilterButton
                android:id="@+id/btn_delete"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_delete_box"
                android:visibility="gone"
                android:onClick="@{() -> register.clearNickName()}"
                app:layout_constraintEnd_toEndOf="@id/et_nickname"
                app:layout_constraintTop_toTopOf="@id/et_nickname"
                app:layout_constraintBottom_toBottomOf="@id/et_nickname"
                tools:visibility="visible"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_random_nickname"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/register_nickname_random"
            android:textSize="@dimen/text_lg"
            android:textColor="@color/gray_6"
            android:fontFamily="@font/pretendard_bold"
            android:paddingHorizontal="12dp"
            android:drawableStart="@drawable/ic_refresh"
            android:onClick="@{() -> register.createRandomNickName()}"
            style="@style/LineButtonStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>