<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/layout_padding">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/btn_toolbar_back"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_left_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_medium"
                android:text="@string/challenge_create_toolbar_complete_title"
                android:textColor="@color/black"
                android:textSize="@dimen/text_2xl"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/tv_toolbar_home"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_home_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/shape_rec_round_4"
            android:backgroundTint="@color/light_blue"
            android:paddingVertical="20dp"
            app:layout_constraintBottom_toTopOf="@id/btn_challenge_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_challenge_complete_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/pretendard_bold"
                android:paddingHorizontal="20dp"
                android:text="@string/challenge_create_complete_text1"
                android:textSize="@dimen/text_base"
                app:layout_constraintBottom_toTopOf="@id/tv_challenge_complete_text2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_challenge_complete_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_bold"
                android:paddingHorizontal="20dp"
                android:text="@string/challenge_create_complete_text2"
                android:textSize="@dimen/text_base"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_marginTop="52dp"
            android:text="@string/challenge_create_complete_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_challenge_check"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height_48"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/challenge_create_complete_button"
            android:textSize="@dimen/text_2xl"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>