<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="register"
            type="com.cider.cider.presentation.viewmodel.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.register.RegisterFragment">

        <TextView
            android:id="@+id/tv_profile_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_profile_title"
            android:textSize="@dimen/text_5xl"
            android:fontFamily="@font/pretendard_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_profile_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_title">

            <TextView
                android:id="@+id/tv_profile_gender"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/register_profile_gender"
                android:textSize="@dimen/text_xl"
                android:gravity="center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_profile_male"
                style="@style/LineButtonStyle"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/register_profile_male"
                android:textSize="@dimen/text_xl"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/btn_profile_female"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_gender" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_profile_female"
                style="@style/LineButtonStyle"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/register_profile_female"
                android:textSize="@dimen/text_xl"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_profile_male"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_gender" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/view_profile_gender">

            <TextView
                android:id="@+id/tv_profile_birth"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/register_profile_birth"
                android:textSize="@dimen/text_xl"
                android:gravity="center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_profile_birth"
                style="@style/TextButtonStyle"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:fontFamily="@font/pretendard_regular"
                app:textDate="@{register.birth}"
                android:textColor="@color/text"
                android:textSize="@dimen/text_xl"
                android:layout_marginTop="8dp"
                android:padding="12dp"
                android:gravity="start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_birth"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>